--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Synergia • Biscotto della fortuna</title>
-  <meta name="description" content="Apri il biscotto della fortuna digitale di Synergia e scopri un messaggio ispirato ai nostri valori." />
+  <meta name="description" content="Apri il biscotto della fortuna digitale di Synergia e scopri un messaggio ispirato ai nostri valori!" />
   <meta property="og:title" content="Biscotto della fortuna • Synergia" />
   <meta property="og:description" content="Scopri un messaggio ispirato ai valori di Synergia." />
   <meta property="og:type" content="website" />
