--- a/index.html
+++ b/index.html
@@ -101,18 +101,18 @@
 
   <script>
     const fortunes = [
-      "La conoscenza non serve a vincere, ma a capire meglio insieme. 💭",
-      "Ogni sistema può cambiare, se qualcuno osa guardarlo da un punto diverso. 🔍",
+      "La conoscenza non serve a vincere, ma a capire. 💭",
+      "Ogni sistema può cambiare in meglio, basta guardarlo da una prospettiva diversa. 🔍",
       "Le soluzioni più solide crescono dove le persone si ascoltano. 🤝",
       "Dietro ogni dato c’è una storia, e dietro ogni storia un’occasione di comprensione. ☀️",
       "Chi guida bene, illumina anche la strada degli altri. 🌟",
-      "La complessità non va semplificata: va capita con rispetto. 🧭",
+      "La complessità non va semplificata: va capita. 🧭",
       "Ogni esplorazione è un atto di fiducia: nel mondo, e in chi lo abita. 🌍",
       "Il futuro non si predice: si costruisce insieme, un progetto alla volta. 🌱",
-      "Ogni dato nasconde una storia: Synergia la ascolta per trasformarla in cambiamento. 💡",
+      "Ogni dato nasconde una storia: se la si sa ascoltare, si trasforma in cambiamento. 💡",
       "Il benessere nasce quando una comunità si prende cura di tutte le sue persone. ❤",
       "L’innovazione sociale è una forma d’amore per il futuro. 🌸",
-      "La sinergia è la nostra forza: insieme, le differenze diventano risorse. ❤️"
+      "La sinergia è forza: insieme, le differenze diventano risorse. ❤️"
     ];
 
     const $ = sel => document.querySelector(sel);
